Added resume PDF

--- a/src/index.scss
+++ b/src/index.scss
@@ -74,24 +74,6 @@ body {
     }
 }
 
-.videoframe {
-    border-radius: 60px;
-    aspect-ratio: 1/1;
-    position: relative;
-    overflow: hidden;
-    width: min(250px, 50vw);
-    object-fit: cover;
-
-    video {
-        object-fit: cover;
-        position: absolute;
-        width: 100%;
-        top: 50%;
-        left: 0;
-        transform: translateY(-50%);
-    }
-}
-
 
 
 h1,
@@ -116,6 +98,26 @@ h3 {
     margin-bottom: 1.5rem;
     color: #fff;
 }
+
+.videoframe {
+    border-radius: 55px;
+    aspect-ratio: 1/1;
+    position: relative;
+    overflow: hidden;
+    width: min(250px, 25vh);
+    object-fit: cover;
+
+    video {
+        object-fit: cover;
+        position: absolute;
+        width: 100%;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+    }
+}
+
+
 
 form,
 .text-block {
