--- a/src/index.scss
+++ b/src/index.scss
@@ -278,6 +278,7 @@ form {
 
         #about,
         #skills,
+        #experience,
         #contact {
             min-height: unset;
             padding-top: 10rem;
