Updated texts and cv

--- a/src/index.scss
+++ b/src/index.scss
@@ -284,8 +284,9 @@ form {
         #experience,
         #contact {
             min-height: unset;
-            padding-top: 10rem;
-            padding-bottom: 10rem;
+            padding-top: .5rem;
+            padding-bottom: 2.5rem;
+            ;
 
         }
 
