--- a/src/index.scss
+++ b/src/index.scss
@@ -174,7 +174,6 @@ h3 {
 
 #experience {
 
-
     .card {
         --bs-card-bg: var(--dark1);
         margin-bottom: 1rem;
@@ -188,6 +187,25 @@ h3 {
             padding-bottom: 0;
             margin-bottom: 0;
             font-weight: 800;
+
+            span {
+                float: right;
+                opacity: 0.5;
+                font-size: 90%;
+            }
+
+            @include mobile {
+                span {
+                    float: none;
+                    display: block;
+                }
+            }
+        }
+
+        .card-body {
+            font-size: 14px;
+            text-align: justify;
+            text-overflow: ellipsis;
         }
     }
 }
@@ -295,14 +313,18 @@ form {
         #experience,
         #contact {
             min-height: unset;
-            padding-top: .5rem;
-            padding-bottom: 2.5rem;
+            padding-top: 2rem;
+            padding-bottom: 5rem;
             ;
 
         }
 
         .card {
             --bs-card-spacer-x: 0.5rem;
+        }
+
+        #about .text-block {
+            font-size: 0.9rem;
         }
     }
 }
