ASP icon, in memory of old times

--- a/src/index.scss
+++ b/src/index.scss
@@ -226,6 +226,7 @@ h3 {
 
             i[class*='php'],
             i[class*='sqlite'] {
+                font-size: 2.5rem;
                 font-size: 2.5rem
             }
 
