--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @mixin mobile {
-    @media (max-width: 640px) {
+    @media (max-width: 680px) {
         @content;
     }
 }
@@ -215,7 +215,7 @@ h3 {
             gap: 0.65rem;
 
             i[class*='devicon'] {
-                font-size: 2rem;
+                font-size: 1.8rem;
 
 
                 &:not(.colored) {
@@ -226,12 +226,18 @@ h3 {
 
             i[class*='php'],
             i[class*='sqlite'] {
-                font-size: 2.5rem;
-                font-size: 2.5rem
+                font-size: 2.3rem;
+                font-size: 2.3rem
             }
 
             img {
-                height: 2rem
+                height: 1.8rem
+            }
+
+            i.squared,
+            img.squared {
+                font-size: 1.4rem;
+                height: 1.4rem
             }
 
             @include mobile {
@@ -246,6 +252,12 @@ h3 {
 
                 img {
                     height: 1.5rem
+                }
+
+                i.squared,
+                img.squared {
+                    font-size: 1.35rem;
+                    height: 1.35rem
                 }
             }
         }
