--- a/src/circles.css
+++ b/src/circles.css
@@ -11,8 +11,8 @@
     position: absolute;
     display: block;
     list-style: none;
-    width: 60px;
-    height: 60px;
+    width: 3.75rem;
+    height: 3.75rem;
     /*background: rgba(255, 255, 255, 0.2);*/
     animation: animate 25s linear infinite;
     bottom: -150px;
@@ -22,78 +22,79 @@
 
 .circles li:nth-child(1) {
     left: 25%;
-    width: 80px;
-    height: 80px;
+    width: 5rem;
+    height: 5rem;
     animation-delay: 0s;
 }
 
 
 .circles li:nth-child(2) {
     left: 10%;
-    width: 65px;
-    height: 65px;
+    width: 4rem;
+    height: 4rem;
     animation-delay: 2s;
-    animation-duration: 12s;
+    animation-duration: 15s;
 }
 
 .circles li:nth-child(3) {
     left: 70%;
-    width: 88px;
-    height: 88px;
+    width: 3rem;
+    height: 3rem;
     animation-delay: 4s;
 }
 
 .circles li:nth-child(4) {
     left: 40%;
-    width: 60px;
-    height: 60px;
+    width: 3.5rem;
+    height: 3.5rem;
     animation-delay: 0s;
     animation-duration: 18s;
 }
 
 .circles li:nth-child(5) {
     left: 65%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0s;
+    width: 3.75rem;
+    height: 3.75rem;
+    animation-delay: 2s;
 }
 
 .circles li:nth-child(6) {
     left: 75%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 3s;
+    width: 4.5rem;
+    height: 4.5rem;
+    animation-delay: 10s;
 }
 
 .circles li:nth-child(7) {
     left: 35%;
-    width: 100px;
-    height: 100px;
-    animation-delay: 7s;
+    width: 5rem;
+    height: 5rem;
+    animation-delay: 5s;
+    animation-duration: 20s;
 }
 
 .circles li:nth-child(8) {
     left: 50%;
-    width: 85px;
-    height: 85px;
+    width: 5rem;
+    height: 5rem;
     animation-delay: 15s;
     animation-duration: 45s;
 }
 
 .circles li:nth-child(9) {
     left: 20%;
-    width: 65px;
-    height: 65px;
+    width: 4rem;
+    height: 4rem;
     animation-delay: 2s;
     animation-duration: 35s;
 }
 
 .circles li:nth-child(10) {
     left: 85%;
-    width: 105px;
-    height: 105px;
+    width: 4.5rem;
+    height: 4.5rem;
     animation-delay: 0s;
-    animation-duration: 11s;
+    animation-duration: 20s;
 }
 
 .lighter {
