--- a/src/circles.css
+++ b/src/circles.css
@@ -20,6 +20,8 @@
 
 }
 
+.circles li img.oasis_logo {height:auto;width:3rem}
+
 .circles li:nth-child(1) {
     left: 25%;
     width: 5rem;
@@ -97,6 +99,14 @@
     animation-duration: 20s;
 }
 
+.circles li:nth-child(11) {
+    left: 55%;
+    width: 5rem;
+    height:2rem;
+    animation-delay: 10s;
+    animation-duration: 20s;
+}
+
 .lighter {
     filter: brightness(100)
 }
@@ -104,13 +114,14 @@
 @keyframes animate {
 
     0% {
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
+        transform: translateY(0) rotate(0deg) scale(1);
+        opacity: 0.8;
         border-radius: 0;
+
     }
 
     100% {
-        transform: translateY(-1000px) rotate(720deg);
+        transform: translateY(-100vh) rotate(720deg) scale(0.65);
         opacity: 0;
         border-radius: 50%;
     }
