Refactored, removed skills icons animation, added css module

--- a/src/index.scss
+++ b/src/index.scss
@@ -394,7 +394,8 @@ form {
 
 
 
-/* Scroll down icon mouse animation */
+/* MouseAnimation component
+Scroll down icon mouse animation */
 
 .scroll-down {
     position: absolute;
