--- a/src/index.scss
+++ b/src/index.scss
@@ -290,6 +290,24 @@ h3 {
             display: block;
             text-align: left;
             font-size: 0.9rem;
+
+            small {
+                font-size: 80%;
+                margin-left: 5px;
+                opacity: 0.65;
+
+            }
+
+            @include mobile {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                font-size: 0.8rem;
+
+                small {
+                    display: none
+                }
+            }
         }
 
         .progress {
