FIxed contact form behavior

--- a/src/index.scss
+++ b/src/index.scss
@@ -202,6 +202,8 @@ h3 {
                 float: right;
                 opacity: 0.5;
                 font-size: 90%;
+                font-weight: 500;
+                ;
             }
 
             @include mobile {
