Graphic enhancements, skills slimming

--- a/src/index.scss
+++ b/src/index.scss
@@ -60,7 +60,7 @@ body {
         display: flex;
         place-items: center;
         justify-content: center;
-        min-height: 100%;
+        min-height: 100dvh;
         flex-direction: column;
         scroll-snap-align: start;
         padding-top: 5rem;
@@ -177,6 +177,44 @@ h3 {
 
     .react-tooltip {
         font-size: 0.8rem;
+    }
+}
+
+
+/* Focus */
+
+
+#focus {
+
+    h2 {
+        line-height: 1;
+    }
+
+    .row .col-12 {
+        display: flex;
+    }
+
+    .card {
+        --bs-card-bg: var(--dark1);
+        margin-bottom: 1rem;
+        width: 100%;
+        border: 0;
+
+        .card-title.h5 {
+            font-size: 1.5rem;
+            //margin-bottom: 0.85rem;
+            margin-top: 0.5rem;
+            margin-bottom: 0;
+            font-weight: 800;
+
+
+            [class*='devicon'] {
+                display: block;
+                font-size: 2.85rem;
+                margin-bottom: 1rem;
+            }
+        }
+
     }
 }
 
@@ -355,41 +393,8 @@ h3 {
     }
 }
 
-#focus {
 
-    h2 {
-        line-height: 1;
-    }
-
-    .row .col-12 {
-        display: flex;
-    }
-
-    .card {
-        --bs-card-bg: var(--dark1);
-        margin-bottom: 1rem;
-        width: 100%;
-        border: 0;
-
-        .card-title.h5 {
-            font-size: 1.5rem;
-            //margin-bottom: 0.85rem;
-            margin-top: 0.5rem;
-            margin-bottom: 0;
-            font-weight: 800;
-
-
-            [class*='devicon'] {
-                display: block;
-                font-size: 2.85rem;
-                margin-bottom: 1rem;
-            }
-        }
-
-    }
-}
-
-/* Contact form */
+/* Contact  */
 form {
     width: 100%;
     padding-left: 1.5rem;
@@ -405,6 +410,8 @@ form {
     textarea.form-control {
         border: solid 1px var(--dark2);
         background-color: var(--dark2);
+
+
 
         &::placeholder {
             color: rgb(161, 161, 170) !important;
@@ -433,6 +440,19 @@ form {
         field-sizing: content;
     }
 
+    @media(min-height:800px) {
+
+        input.form-control,
+        textarea.form-control {
+            padding-top: 1vh;
+            padding-bottom: 1vh;
+        }
+
+        textarea.form-control {
+            min-height: 6lh;
+        }
+    }
+
     input.btn[type='submit'] {
         background-color: var(--accent);
         border-color: var(--accent);
@@ -445,15 +465,6 @@ form {
     body {
         font-size: 13px;
         scroll-snap-type: unset;
-
-        #about,
-        #skills,
-        #focus,
-        #experience,
-        #contact {
-            min-height: unset;
-
-        }
 
         .card {
             --bs-card-spacer-x: 0.5rem;
