Adjusted mouse animation

--- a/src/index.scss
+++ b/src/index.scss
@@ -163,6 +163,7 @@ h3 {
         font-size: 2.85em;
         font-weight: 900;
         color: var(--accent);
+        text-shadow: 1px 0 0 rgb(161, 161, 170);
     }
 
 
