--- a/src/components/MouseAnimation.module.css
+++ b/src/components/MouseAnimation.module.css
@@ -5,11 +5,12 @@
 	 left: 0;
 	 margin: auto;
 	 transition: opacity 2s;
+	 transition-delay: 2s;
 	 opacity: 0.95;
 	 width: 34px;
 	 height: 55px;
 }
- .scroll-down.hidden {
+ .hidden {
 	 opacity: 0;
 }
  @media (max-height: 800px) {
