--- a/src/index.scss
+++ b/src/index.scss
@@ -107,23 +107,17 @@ body {
             z-index: 10;
         }
 
-        ;
-
-        &#intro,
-        &#focus,
-        &#experience,
-        #contact {
+        &:nth-of-type(1n) {
             background-color: var(--dark2);
         }
 
-        &:nth-child(odd) {
+        &:nth-of-type(2n) {
             background-color: var(--dark1);
         }
 
+
     }
 }
-
-
 
 h1,
 h2 {
@@ -172,6 +166,7 @@ h3 {
     width: min(90%, 60rem);
     text-wrap: balance;
     margin-inline: auto;
+    text-shadow: var(--bs-body-bg) 1px 0 5px;
 
     @media (min-width: 1200px) and (min-height: 800px) {
         &:not(:last-of-type) {
@@ -297,7 +292,7 @@ h3 {
                 opacity: 0.5;
                 font-size: 90%;
                 font-weight: 500;
-                ;
+
             }
 
             @include mobile {
@@ -319,15 +314,24 @@ h3 {
             text-overflow: ellipsis;
 
             .list-group-item {
+                position: relative;
                 border-color: var(--bs-card-border-color);
                 border-top: 0;
                 border-left: 0;
                 border-right: 0;
                 padding-inline: 0;
+                padding-left: 26px;
 
                 &:last-child {
                     border-bottom: 0;
                 }
+
+
+                background-image: url('../favicon.ico');
+                background-position: 0 0.7rem;
+                background-repeat: no-repeat;
+
+
             }
 
         }
@@ -346,7 +350,9 @@ h3 {
 
             i,
             img {
-                filter: saturate(0.75);
+
+                //filter: saturate(0.75);
+                filter: brightness(0.95)
             }
 
             i[class*='devicon'] {
