--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import 'https://fonts.googleapis.com/css2?family=Cairo+Play:wght@900&family=Cairo:wght@900&family=Open+Sans:wght@300;400;600&display=swap';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import 'https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css';
 @import 'https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css';
 
@@ -20,14 +21,19 @@
     }
 }
 
+$body-font: 'Rubik',
+'Open Sans',
+sans-serif;
+$header-font: 'Cairo',
+sans-serif;
+
 :root {
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
-    //--dark1: #222;
-    //--dark2: #121517;
+    --body-color: rgba(171, 171, 180);
     --dark1: #34376a;
     --dark2: #2E3060;
     --accent: #a43b5a;
@@ -79,15 +85,13 @@ html {
 
 body {
     margin: 0;
-
     height: 100svh;
     text-align: center;
-    font-family: 'Open Sans', Inter, system-ui, Avenir, Helvetica, Arial,
-        sans-serif;
+    font-family: $body-font;
     font-size: clamp(14px, 16px, 18px);
     line-height: 1.5;
     font-weight: 400;
-    color: rgba(161, 161, 170);
+    color: var(--body-color);
     background-color: var(--dark1);
 
 
@@ -152,9 +156,7 @@ body {
 h1,
 h2 {
     line-height: 1.25;
-    font-family:
-        /*'Cairo Play',*/
-        'Cairo', sans-serif;
+    font-family: $header-font;
     font-weight: 900;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -172,6 +174,10 @@ h2 {
 h3 {
     margin-bottom: 1.5rem;
     color: #fff;
+
+    &.font-open {
+        font-family: 'Open Sans';
+    }
 }
 
 hr {
@@ -286,7 +292,7 @@ hr {
         .card-title.h5 {
             font-size: 1.5rem;
             //margin-bottom: 0.85rem;
-            margin-top: 0.5rem;
+            margin: 0.5rem 1 rem 0 0;
             margin-bottom: 0;
             font-weight: 800;
 
@@ -326,7 +332,7 @@ hr {
                 opacity: 0.5;
                 font-size: 90%;
                 font-weight: 500;
-
+                margin-left: 2rem;
             }
 
             @include mobile {
@@ -346,27 +352,6 @@ hr {
             font-size: 14px;
             text-align: justify;
             text-overflow: ellipsis;
-
-            .list-group-item {
-                position: relative;
-                border-color: var(--bs-card-border-color);
-                border-top: 0;
-                border-left: 0;
-                border-right: 0;
-                padding-inline: 0;
-                padding-left: 26px;
-
-                &:last-child {
-                    border-bottom: 0;
-                }
-
-                background-color: rgba(255, 255, 255, 0);
-                background-image: url('../favicon.ico');
-                background-position: 0 0.7rem;
-                background-repeat: no-repeat;
-
-
-            }
 
         }
 
@@ -509,6 +494,11 @@ hr {
             }
         }
 
+        .two-cols {
+            columns: 2;
+            column-gap: 1rem;
+            text-align: left
+        }
 
     }
 
@@ -524,6 +514,30 @@ hr {
     }
 }
 
+
+
+/* Lists */
+
+.list-group-item {
+    position: relative;
+    color: var(--body-color);
+    border-color: var(--bs-card-border-color);
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    padding-inline: 0;
+    padding-left: 26px;
+    text-align: left;
+    background-color: rgba(255, 255, 255, 0);
+    background-image: url('../favicon.ico');
+    background-position: 0 0.7rem;
+    background-repeat: no-repeat;
+
+    &:last-child {
+        border-bottom: 0;
+    }
+
+}
 
 /* Contact  */
 form {
