--- a/src/index.scss
+++ b/src/index.scss
@@ -265,6 +265,51 @@ hr {
     }
 }
 
+.certificates {
+    display: none;
+
+    img {
+        display: inline-block;
+        height: 16vh;
+        max-height: 20vw;
+        margin-inline: 0.5vw;
+    }
+
+    .sr-only {
+        display: block
+    }
+}
+
+@include mobile {
+    .certificates img {
+        height: 12vh;
+        max-height: 30vw;
+    }
+}
+
+@include mobile-xs {
+    .certificates img {
+        height: 8vh;
+        max-height: 40vw;
+    }
+}
+
+.langSwitcher {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    z-index: 999;
+
+    button {
+        margin: 0;
+        border: 0;
+        padding: 0;
+        background: rgba(255, 255, 255, 0);
+        color: #fff
+    }
+}
+
 
 /* Focus */
 
@@ -627,4 +672,21 @@ form {
 
         --bs-progress-height: 1.65rem;
     }
+}
+
+/* sr-only */
+
+
+.sr-only {
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px) !important;
+    -webkit-clip-path: inset(50%) !important;
+    clip-path: inset(50%) !important;
+    height: 1px !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+    white-space: nowrap !important;
 }
