--- a/src/index.scss
+++ b/src/index.scss
@@ -301,12 +301,19 @@ hr {
     padding: 1rem;
     z-index: 999;
 
+
+
     button {
         margin: 0;
         border: 0;
         padding: 0;
         background: rgba(255, 255, 255, 0);
-        color: #fff
+        color: #fff;
+        opacity: 0.65;
+
+        &:hover {
+            opacity: 1;
+        }
     }
 }
 
