--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import 'https://fonts.googleapis.com/css2?family=Cairo+Play:wght@900&family=Cairo:wght@900&family=Open+Sans:wght@300;400;600&display=swap';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap';
 @import 'https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css';
 @import 'https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css';
 
