--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import 'https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap';
 @import 'https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css';
 @import 'https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css';
+@import url(carousel.css);
 
 @mixin tablet {
     @media (max-width: 820px) {
@@ -73,6 +74,28 @@ $header-font;
     transition: opacity 2s;
 }
 
+/* ===== Scrollbar ===== */
+
+* {
+    scrollbar-width: auto;
+    scrollbar-color: var(--darker-accent) var(--dark2);
+}
+
+*::-webkit-scrollbar {
+    width: 1.5rem;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--dark2);
+    ;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #773155;
+    border-radius: 1rem;
+    border: none;
+}
+
 
 @include mobile {
     .mac-bg {
@@ -89,6 +112,12 @@ $header-font;
 html {
     scroll-behavior: smooth;
     scroll-snap-type: y proximity;
+}
+
+@include mobile {
+    html {
+        scroll-snap-type: unset;
+    }
 }
 
 body {
@@ -161,6 +190,8 @@ body {
     }
 }
 
+/* ===== Headers ===== */
+
 h1,
 h2 {
     line-height: 1.25;
@@ -213,7 +244,7 @@ hr {
 }
 
 .text-block {
-    width: min(90%, 65rem);
+    width: min(90%, 85rem);
     text-wrap: balance;
     margin-inline: auto;
     text-shadow: var(--bs-body-bg) 1px 0 5px;
@@ -239,7 +270,8 @@ hr {
 }
 
 .buttons {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
+    //margin-bottom: 1.5rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
@@ -275,34 +307,34 @@ hr {
     }
 }
 
-.certificates {
-    display: none;
+// .certificates {
+//     display: block;
 
-    img {
-        display: inline-block;
-        height: 16vh;
-        max-height: 20vw;
-        margin-inline: 0.5vw;
-    }
+//     img {
+//         display: inline-block;
+//         height: 14vh;
+//         min-height: 10vw;
+//         margin-inline: 0.5vw;
+//     }
 
-    .sr-only {
-        display: block
-    }
-}
+//     .sr-only {
+//         display: block
+//     }
+// }
 
-@include mobile {
-    .certificates img {
-        height: 12vh;
-        max-height: 30vw;
-    }
-}
+// @include mobile {
+//     .certificates img {
+//         height: 12vh;
+//         max-height: 30vw;
+//     }
+// }
 
-@include mobile-xs {
-    .certificates img {
-        height: 8vh;
-        max-height: 40vw;
-    }
-}
+// @include mobile-xs {
+//     .certificates img {
+//         height: 8vh;
+//         max-height: 40vw;
+//     }
+// }
 
 .langSwitcher {
     position: fixed;
@@ -328,7 +360,7 @@ hr {
 }
 
 
-/* Focus */
+/* ===== Focus ===== */
 
 
 #focus {
@@ -369,8 +401,7 @@ hr {
     }
 }
 
-
-/* Experience */
+/* ===== Experience ===== */
 
 #experience {
 
@@ -424,9 +455,15 @@ hr {
             padding-bottom: 0.25rem;
         }
 
+        .list-group {
+            width: 100%;
+            margin-top: 2vh;
+        }
+
         .card-footer {
             display: flex;
             align-items: center;
+            justify-content: center;
             margin-inline: var(--bs-card-spacer-x);
             padding-inline: 0;
             flex-wrap: wrap;
@@ -487,9 +524,18 @@ hr {
             }
         }
     }
+
+
+    @include mobile {
+        .carousel .control-arrow {
+            display: none;
+        }
+    }
+
 }
 
-/* Skills */
+/* ===== Skills ===== */
+
 #skills {
     .row .col-6 {
         display: flex;
@@ -580,8 +626,7 @@ hr {
 }
 
 
-
-/* Lists */
+/* ===== Lists ===== */
 
 .list-group-item {
     position: relative;
@@ -604,7 +649,8 @@ hr {
 
 }
 
-/* Contact  */
+/* ===== Contact ===== */
+
 form {
     width: 100%;
     padding-left: 1.5rem;
@@ -662,7 +708,7 @@ form {
     }
 }
 
-/* Mobile adaption */
+/* ===== Mobile ===== */
 
 @include mobile {
     body {
@@ -687,7 +733,7 @@ form {
     }
 }
 
-/* XL adaption */
+/* ===== Desktop XL ===== */
 
 @include xxl {
 
@@ -700,14 +746,14 @@ form {
         font-size: 1.1rem;
     }
 
+    #experience .list-group-item,
     #skills .list-group-item {
         --bs-list-group-item-padding-y: 1rem;
         background-position-y: 1.2rem;
     }
 }
 
-/* sr-only */
-
+/* ===== SR ===== */
 
 .sr-only {
     border: 0 !important;
